@@ -1,5 +1,12 @@
 2005-08-29  Eric Anholt  <anholt@FreeBSD.org>
 
+	* libswfdec/actions.c: (swfdec_init_context):
+	* libswfdec/actions_builtin.c: (action_register_sprite_seg):
+	* libswfdec/swfdec_actions.h:
+	Expand the scope of GC debugging, exposing a new issue quickly.
+
+2005-08-29  Eric Anholt  <anholt@FreeBSD.org>
+
 	* libswfdec/actions_builtin.c: (swfdec_init_context_builtins):
 	Don't forget to initialize the jsval when setting _root.  Fixes a GC
 	crash, at a minimum.
